--- a/soundwich/SoundwichFeedCell.xib
+++ b/soundwich/SoundwichFeedCell.xib
@@ -27,12 +27,6 @@
                             <action selector="onPlayTapped:" destination="Kce-O2-r9h" eventType="touchUpInside" id="bqe-VR-0OA"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lhq-vK-Cc6">
-                        <rect key="frame" x="76" y="45" width="31" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3.65" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lj6-tG-HuY">
                         <rect key="frame" x="561" y="49" width="31" height="17"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
@@ -42,6 +36,12 @@
                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="74b-X5-EfQ">
                         <rect key="frame" x="120" y="55" width="433" height="2"/>
                     </progressView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lhq-vK-Cc6">
+                        <rect key="frame" x="76" y="45" width="31" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="Lj6-tG-HuY" secondAttribute="bottom" constant="13" id="7Ks-KY-0mB"/>
@@ -60,7 +60,9 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="endTimeLabel" destination="Lj6-tG-HuY" id="oRJ-5R-M3l"/>
                 <outlet property="playButton" destination="dJw-HJ-jnh" id="fir-tT-ZT0"/>
+                <outlet property="starttTimeLabel" destination="Lhq-vK-Cc6" id="kge-zz-Y3u"/>
                 <outlet property="titleLabel" destination="RNz-Fa-pB7" id="VST-0u-VMw"/>
             </connections>
             <point key="canvasLocation" x="245" y="-7"/>
