--- a/soundwich/SoundwichFeedCell.xib
+++ b/soundwich/SoundwichFeedCell.xib
@@ -7,65 +7,72 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="-14" id="Kce-O2-r9h" customClass="SoundwichFeedCell" customModule="soundwich" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="-18" id="Kce-O2-r9h" customClass="SoundwichFeedCell" customModule="soundwich" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="76"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kce-O2-r9h" id="ukR-IC-T6c">
-                <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="600" height="75.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soundwich Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RNz-Fa-pB7">
-                        <rect key="frame" x="76" y="8" width="180" height="29"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dJw-HJ-jnh">
-                        <rect key="frame" x="0.0" y="5" width="68" height="68"/>
+                        <rect key="frame" x="4" y="4" width="68" height="67.5"/>
                         <state key="normal" image="Play Button Dark"/>
                         <connections>
                             <action selector="onPlayTapped:" destination="Kce-O2-r9h" eventType="touchUpInside" id="bqe-VR-0OA"/>
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3.65" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lj6-tG-HuY">
-                        <rect key="frame" x="561" y="49" width="31" height="17"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                        <rect key="frame" x="561" y="49" width="27" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="74b-X5-EfQ">
-                        <rect key="frame" x="120" y="55" width="433" height="2"/>
+                        <rect key="frame" x="113" y="51" width="436" height="2"/>
                     </progressView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lhq-vK-Cc6">
-                        <rect key="frame" x="76" y="45" width="31" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                        <rect key="frame" x="74" y="44.5" width="27" height="19"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soundwich Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RNz-Fa-pB7">
+                        <rect key="frame" x="73" y="12" width="135.5" height="25.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Lj6-tG-HuY" secondAttribute="bottom" constant="13" id="7Ks-KY-0mB"/>
-                    <constraint firstItem="74b-X5-EfQ" firstAttribute="leading" secondItem="Lhq-vK-Cc6" secondAttribute="trailing" constant="13" id="Hpt-7k-awp"/>
-                    <constraint firstItem="RNz-Fa-pB7" firstAttribute="top" secondItem="ukR-IC-T6c" secondAttribute="top" constant="8" id="IhW-jq-y7b"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Lhq-vK-Cc6" secondAttribute="bottom" constant="5" id="LJx-8d-Gqw"/>
-                    <constraint firstItem="74b-X5-EfQ" firstAttribute="top" secondItem="RNz-Fa-pB7" secondAttribute="bottom" constant="18" id="NFY-sK-VMj"/>
-                    <constraint firstItem="dJw-HJ-jnh" firstAttribute="top" secondItem="ukR-IC-T6c" secondAttribute="top" constant="5" id="OQf-4h-Acg"/>
-                    <constraint firstItem="dJw-HJ-jnh" firstAttribute="leading" secondItem="ukR-IC-T6c" secondAttribute="leading" id="RiN-X5-YTX"/>
-                    <constraint firstItem="Lj6-tG-HuY" firstAttribute="leading" secondItem="74b-X5-EfQ" secondAttribute="trailing" constant="8" id="Tfu-dZ-Yy2"/>
-                    <constraint firstAttribute="trailing" secondItem="Lj6-tG-HuY" secondAttribute="trailing" constant="8" id="WoH-vn-Kog"/>
-                    <constraint firstItem="Lhq-vK-Cc6" firstAttribute="leading" secondItem="dJw-HJ-jnh" secondAttribute="trailing" constant="8" id="dRN-yV-SL3"/>
-                    <constraint firstItem="Lhq-vK-Cc6" firstAttribute="top" secondItem="RNz-Fa-pB7" secondAttribute="bottom" constant="8" id="kz1-U3-4CU"/>
-                    <constraint firstItem="RNz-Fa-pB7" firstAttribute="leading" secondItem="dJw-HJ-jnh" secondAttribute="trailing" constant="8" id="qzc-8z-e4X"/>
+                    <constraint firstAttribute="bottom" secondItem="Lj6-tG-HuY" secondAttribute="bottom" constant="12" id="7Ks-KY-0mB"/>
+                    <constraint firstItem="74b-X5-EfQ" firstAttribute="leading" secondItem="Lhq-vK-Cc6" secondAttribute="trailing" constant="12" id="Hpt-7k-awp"/>
+                    <constraint firstItem="RNz-Fa-pB7" firstAttribute="top" secondItem="ukR-IC-T6c" secondAttribute="top" constant="12" id="IhW-jq-y7b"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Lhq-vK-Cc6" secondAttribute="bottom" constant="12" id="LJx-8d-Gqw"/>
+                    <constraint firstItem="74b-X5-EfQ" firstAttribute="top" secondItem="RNz-Fa-pB7" secondAttribute="bottom" constant="14" id="NFY-sK-VMj"/>
+                    <constraint firstItem="dJw-HJ-jnh" firstAttribute="top" secondItem="ukR-IC-T6c" secondAttribute="top" constant="4" id="OQf-4h-Acg"/>
+                    <constraint firstItem="dJw-HJ-jnh" firstAttribute="leading" secondItem="ukR-IC-T6c" secondAttribute="leading" constant="4" id="RiN-X5-YTX"/>
+                    <constraint firstItem="Lj6-tG-HuY" firstAttribute="leading" secondItem="74b-X5-EfQ" secondAttribute="trailing" constant="12" id="Tfu-dZ-Yy2"/>
+                    <constraint firstAttribute="trailing" secondItem="Lj6-tG-HuY" secondAttribute="trailing" constant="12" id="WoH-vn-Kog"/>
+                    <constraint firstItem="Lhq-vK-Cc6" firstAttribute="leading" secondItem="dJw-HJ-jnh" secondAttribute="trailing" constant="2" id="dRN-yV-SL3"/>
+                    <constraint firstAttribute="bottom" secondItem="Lhq-vK-Cc6" secondAttribute="bottom" constant="12" id="glb-Dz-u23"/>
+                    <constraint firstItem="Lhq-vK-Cc6" firstAttribute="top" secondItem="RNz-Fa-pB7" secondAttribute="bottom" constant="7" id="kz1-U3-4CU"/>
+                    <constraint firstItem="RNz-Fa-pB7" firstAttribute="leading" secondItem="dJw-HJ-jnh" secondAttribute="trailing" constant="1" id="qzc-8z-e4X"/>
+                    <constraint firstAttribute="bottom" secondItem="dJw-HJ-jnh" secondAttribute="bottom" constant="4" id="vO5-To-fQ9"/>
                     <constraint firstAttribute="bottom" secondItem="74b-X5-EfQ" secondAttribute="bottom" constant="22" id="xl8-EU-YMc"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="LJx-8d-Gqw"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="endTimeLabel" destination="Lj6-tG-HuY" id="oRJ-5R-M3l"/>
                 <outlet property="playButton" destination="dJw-HJ-jnh" id="fir-tT-ZT0"/>
-                <outlet property="starttTimeLabel" destination="Lhq-vK-Cc6" id="kge-zz-Y3u"/>
+                <outlet property="startTimeLabel" destination="Lhq-vK-Cc6" id="iuw-fo-aq7"/>
                 <outlet property="titleLabel" destination="RNz-Fa-pB7" id="VST-0u-VMw"/>
             </connections>
-            <point key="canvasLocation" x="245" y="-7"/>
+            <point key="canvasLocation" x="245" y="-9"/>
         </tableViewCell>
     </objects>
     <resources>
